# openapi-forge

./: .gitignore  .spectral.yaml  LICENSE  README.md  Taskfile.yml  bun.lockb  go.mod  package.json
.github/: CODEOWNERS
adapters/go/: models.gen.go  server.gen.go
adapters/python/: models.py
adapters/python/server/: README.md  docker-compose.yaml  openapi.yaml  setup.cfg
adapters/python/server/.openapi-generator/: FILES
adapters/python/server/src/contracts/: main.py  security_api.py
adapters/python/server/src/contracts/apis/: authentication_api.py  authentication_api_base.py  health_api.py  health_api_base.py  users_api.py  users_api_base.py
adapters/python/server/src/contracts/models/: auth_request_payload.py  auth_token_refresh_request_payload.py  authenticate_user200_response.py  error.py  get_health_status200_response.py  get_user_list200_response.py  logout_user200_response.py  order.py  pagination_meta.py  register_request_payload.py  token_response.py  user.py  user_create_request.py  user_role.py  user_sort_field.py  user_status.py  user_update_email_request.py  user_update_request.py
adapters/python/server/tests/: conftest.py  test_authentication_api.py  test_health_api.py  test_users_api.py
codegen/go/: README.md  models.yaml  server.yaml
codegen/python/: README.md  fastapi.yaml
codegen/typescript/: README.md  client.yaml
generators/go/: README.md  go.mod  go.sum  models.yaml  server.yaml
generators/python/: README.md  models.yaml  openapitools.json  requirements.txt
generators/typescript/: README.md  bun.lockb  (+2 more)
src/: openapi.yaml
(+36 files in other folders)
