[metadata]
name = contracts
version = 1.0.0
description = # Contracts Blueprint API  A simple API blueprint demonstrating enterprise-grade OpenAPI specifications with multi-language code generation support for Go, Python, and TypeScript.  This API provides basic authentication and user management functionality.  ## Features - JWT-based authentication - User CRUD operations - Multi-language SDK generation - Comprehensive error handling  ## Error Codes - &#x60;ERR_INTERNAL&#x60;: Internal server error - &#x60;ERR_INVALID_ARG&#x60;: Invalid argument(s) provided - &#x60;ERR_NOT_FOUND&#x60;: Resource not found - &#x60;ERR_ALREADY_EXISTS&#x60;: Resource already exists - &#x60;ERR_ACCESS_DENIED&#x60;: Access denied - &#x60;ERR_INVALID_CREDENTIALS&#x60;: Invalid authentication credentials - &#x60;ERR_VALIDATION_FAILED&#x60;: Request validation failed 
long_description = file: README.md
keywords = OpenAPI Contracts Blueprint API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
